# fast-api-expense-tracker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.env  pytest.ini  run.py  vscode-extensions.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 24b06af8dd6b_added_constraint_on_fk_and_expense_.py  334aee256479_reoved_the_payer_unique_constraint_in_.py  4d267a514c69_expense_groups_created.py  c799cb38378e_1_init_auth_table.py  dcdd9e141e38_fixed_user_relations.py  e44aff2e6b8b_fixed_on_delete_cascade.py
app/: __init__.py  celery_worker.py  dependencies.py  main.py
app/config/: celery_config.py  environment.py
app/dependencies/: __init__.py  celery_dependencies.py  database_dependencies.py  repos_dependencies.py  services_dependencies.py  settings_dependencies.py
app/exceptions/: __init__.py  application_exception.py  db_connection_async_support_missing.py  env_missing_exception.py  env_wrong_format.py  expense_exception.py  group_exception.py  jwt_exception.py  user_exception.py
app/handlers/: expense_sync_handler.py
app/middleware/: factory.py  jwt_auth_middleware.py  jwt_middleware.py  middleware_dependencies.py  (+1 more)
docs/: api_doc.md  github_naming_conventions.md  schema_diagram.md
fast_api_expense_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  test_sync_controller.py  test_system_balance.py  test_system_expenses.py  test_system_groups.py  test_system_sync.py  test_system_sync_v2.py  test_system_user.py  test_unit_user_pg_repository.py
(+57 files in other folders)
