[project]
name = "fast-api-expense-tracker"
version = "0.1.0"
description = "FastAPI Expense Tracker App with Repository Pattern"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pydantic[email]>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.10.1",
    "asyncpg>=0.30.0",
    "asyncio>=3.4.3",
    "sqlalchemy>=2.0.41",
    "alembic>=1.16.4",
    "psycopg2>=2.9.10",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.4",
    "pytest-cov>=6.2.1",
    "coverage>=7.9.2",
    "bcrypt>=3.2.2",
    "python-jose>=3.5.0",
    "passlib>=1.7.4",
    "mypy>=1.17.0",
    "bandit>=1.8.6",
    "types-python-jose>=3.5.0.20250531",
    "pre-commit>=4.2.0",
    "httpx>=0.28.1",
    "celery>=5.5.3",
    "redis>=6.2.0",
    "flower>=2.0.1",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",  # adds the root folder to sys.path
    "./app",
]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20"
]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101","PLR2004","PT011"]


[tool.ruff]
line-length = 120
exclude = [
    "alembic/versions",
]

[tool.setuptools]
packages = ["app"]

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.ruff.format]
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.mypy]
ignore_missing_imports = true